CHANGES - 01/29/2005
--------------------

CHANGES IN Mini-XML 2.1.1

	- Added support for CDATA (STR #14, STR #15)
	- Updated comment and processing instruction handling -
	  no entity support per XML specification.
	- Added checking for invalid comment termination ("--->"
	  is not allowed)


CHANGES IN Mini-XML 2.1

	- Added support for custom data nodes (STR #6)
	- Now treat UTF-8 sequences which are longer than
	  necessary as an error (STR #4)
	- Fixed entity number support (STR #8)
	- Fixed mxmlLoadString() bug with UTF-8 (STR #7)
	- Fixed entity lookup bug (STR #5)
	- Added mxmlLoadFd() and mxmlSaveFd() functions.
	- Fixed multi-word UTF-16 handling.


CHANGES IN Mini-XML 2.0

	- New programmers manual.
	- Added Visual C++ project files for Microsoft Windows
	  users.
	- Added optimizations to mxmldoc, mxmlSaveFile(), and
	  mxmlIndexNew() (STR #2)
	- mxmlEntityAddCallback() now returns an integer status
	  (STR #2)
	- Added UTF-16 support (input only; all output is UTF-8)
	- Added index functions to build a searchable index of
	  XML nodes.
	- Added character entity callback interface to support
	  additional character entities beyond those defined in
	  the XHTML specification.
	- Added support for XHTML character entities.
	- The mxmldoc utility now produces XML output which
	  conforms to an updated XML schema, described in the file
	  "doc/mxmldoc.xsd".
	- Changed the whitespace callback interface to return
	  strings instead of a single character, allowing for
	  greater control over the formatting of XML files
	  written using Mini-XML.  THIS CHANGE WILL REQUIRE
	  CHANGES TO YOUR 1.x CODE IF YOU USE WHITESPACE
	  CALLBACKS.
	- The mxmldoc utility is now capable of documenting C++
	  classes, functions, and structures, and correctly
	  handles C++ comments.
	- Added new modular tests for mxmldoc.
	- Updated the mxmldoc output to be more compatible with
	  embedding in manuals produced with HTMLDOC.
	- The makefile incorrectly included a "/" separator